--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -135,7 +135,7 @@ const jsonldStringfy = JSON.stringify({
     }
 
     main {
-      padding: 32px 0;
+      padding: 32px 0 0 0;
       /* PageTitleの右端とページコンテンツの左端を合わせ、ヘッダーの右端まで伸ばす */
       max-width: calc(95vw - 8.25rem); /* PageTitleの左端からヘッダーの右端まで */
       margin: 0 auto;
@@ -212,7 +212,7 @@ const jsonldStringfy = JSON.stringify({
       padding-top: 5rem; /* ヘッダーの高さ分のマージンを追加 */
       margin-right:0rem;
       border-bottom: 1px solid #e5e7eb;
-      padding-bottom: 0;
+      padding-bottom: 1rem;
     }
     
     @media (max-width: 768px) {
