--- a/src/components/hover-indicator.css
+++ b/src/components/hover-indicator.css
@@ -23,9 +23,9 @@
 .hover-indicator-nav.vertical .button-container {
   display: block;
   width: 100%;
-  margin: 0.0625rem 0;
+  margin: 0.0625rem 0 0.03125rem 0;
   position: relative;
-  padding: 0.25rem 0.25rem 0.25rem 0;
+  padding: 0.25rem 0.25rem 0.125rem 0.5rem;
 }
 
 .hover-indicator-nav.with-background {
