--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -1,51 +1,15 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import PageTitle from "../components/PageTitle";
+import PageContainer from "../components/PageContainer";
 import "../components/page-title.css";
+import "../components/page-container.css";
 ---
 
 <Layout title="Works">
-    <div class="works-page">
+    <PageContainer variant="works">
         <PageTitle title="WORKS" client:load />
-        
-    </div>
+    </PageContainer>
 </Layout>
 
-<style>
-    .works-page {
-        max-width: 1200px;
-        margin: 0 auto;
-        margin-left: 10rem;
-        padding: 2rem 1rem;
-        position: relative;
-    }
-
-    /* タブレットサイズ */
-    @media (max-width: 1024px) {
-        .works-page {
-            margin-left: 8rem;
-        }
-    }
-
-    @media (max-width: 768px) {
-        .works-page {
-            margin-left: 5rem;
-        }
-    }
-
-    /* 小さなモバイルサイズ */
-    @media (max-width: 480px) {
-        .works-page {
-            margin-left: 3.5rem;
-        }
-    }
-
-    /* 非常に小さなモバイルサイズ */
-    @media (max-width: 320px) {
-        .works-page {
-            margin-left: 2.5rem;
-        }
-    }
-
-</style>
 
